--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -136,9 +136,9 @@ body {
   }
 }
 
-* {
+/* * {
   font-family: var(--font-inter);
-}
+} */
 
 .animate-load {
   animation: load 2s linear infinite;
